[package]
name = "rust-ethereum-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = "1.21.0"
serde_json = "1.0"
ticker = "0.1.1"
secp256k1 = { version = "0.24.0", features = ["std","rand-std","bitcoin_hashes","global-context"] }
tiny-keccak = "2.0.2"
bitcoin = "0.29.1"
bip0039 = "0.10.1"
hex = "0.4.3"

